# SPW

./: .gitignore  CMakeLists.txt  Info.md  README.md
Assets/Atlas/: Enemy.json  Grid.json  Lever.json  Player.json  Terrain.json  UI.json  jb_logo.json
Assets/Level/: La Grotte.txt  Level01.txt  LevelDemo.txt  Lile.txt
SPW/: ApplicationInput.cpp  AssetManager.cpp  AssetManager.h  Background.cpp  Background.h  Brick.cpp  Button.cpp  Camera.cpp  Camera.h  Checkpoint.cpp  Constants.h  ControlsInput.cpp  ControlsInput.h  EditorCanvas.cpp  EditorCanvas.h  EditorHeader.cpp  EditorHeader.h  EditorLevelSelection.cpp  EditorLevelSelection.h  EditorMap.cpp  EditorMap.h  EditorParser.cpp  EditorParser.h  EditorSaver.cpp  EditorSaver.h  EditorScene.cpp  EditorScene.h  EditorSelector.cpp  EditorSelector.h  EditorUi.cpp  EditorUi.h  EndMenu.cpp  EndMenu.h  Firefly.cpp  Firefly.h  Flappy.cpp  Flappy.h  GameObject.h  GravityModifier.cpp  GravityModifier.h  (+30 more)
